# f_algo3_tp1

./: .gitignore  CMakeLists.txt  Makefile  README.md
informe/: Algo1Macros.tex  brainstorming.tex  caratula.sty  ejercicio1.tex  ejercicio2.tex  ejercicio3.tex  main.run.xml  main.tex
informe/gali/uba/: g-caratula.sty  g-uba.sty
informe/gali/util/: g-util-math.sty  g-util.sty
src/ej1/: coord.cc  coord.h  ideasTests.md  ideasTestsEj1.md  main.cc  map.cc  map.h  memory.cc  memory.h  svector.cc  svector.h  tourCounter.cc  tourCounter.h  utils.h
src/ej2/: ideasTestsEj2.md  main.cc  sprinkler.cc  sprinkler.h  utils.h
src/ej3/: ideasTestsEj3.md  main.cc  sprinkler.cc  sprinkler.h  utils.h
test/: ej1.cc
tests/: testej1.cpp  testej2.cpp  testej3.cpp
